Modification of placement of the buttons

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -134,15 +134,19 @@
                 </div>
 
                 <div class="feed-content-controls pure-u-1-2">
-                    <button class="secondary-button pure-button">Star</button>
-                    <button class="secondary-button pure-button">Mark as unread</button>
-                    <button class="secondary-button pure-button">Share</button>
+                    
                 </div>
             </div>
 
             <div feed-item-id-hide="f_123" class="feed-content-body" idToHide="f_123">
-                abcdsa 
+            <button class="secondary-button pure-button">Star</button>
+                    <button class="secondary-button pure-button">Mark as unread</button>
+                    <button class="secondary-button pure-button">Share</button>
+                <p> Hello World </p> 
+                This is a sample
+
             </div>
+
         </div>
 
     </div>
