--- a/web/angular/app/view_main/view_main.html
+++ b/web/angular/app/view_main/view_main.html
@@ -6,13 +6,15 @@
 <meta name="description" content="A layout example that shows off a responsive feed layout.">
 
     <title>feed &ndash; </title>
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
-<link rel="stylesheet" href="res/pure-extras/css/pure-extras.css">
+
+    
+
+
     <!--[if lte IE 8]>
         <link rel="stylesheet" href="css/layouts/feed-old-ie.css">
     <![endif]-->
     <!--[if gt IE 8]><!-->
-        <link rel="stylesheet" href="res/custom/css/layouts/main.css">
+    <link rel="stylesheet" href="res/custom/css/layouts/main.css">
     <!--<![endif]-->
 </head>
 <body>
@@ -123,7 +125,7 @@
         <div class="feed-content">
             <div class="feed-content-header pure-g">
                 <div class="pure-u-1-2">
-                    <h2 class="feed-content-title" feed-item-id="f_123" id="toronto"><a href="#"> Hello from Toronto </a></h2>
+                    <h2 class="feed-content-title" feed-item-id="f_123" id="toronto"> Hello from Toronto </h2>
                     <p class="feed-content-subtitle">
                         <a href="#">Posted at 3:56pm, April 3, 2012</a>
                     </p>
@@ -135,7 +137,7 @@
                 <button class="secondary-button pure-button">Mark as unread</button>
                 <button class="secondary-button pure-button">Share</button>
                 <p> Hello World </p> 
-                This is a sample
+                This is a sadsadsample
             </div>
 
         </div>
@@ -143,10 +145,3 @@
     </div>
 </div>
 
-<script src="res/pure/yui-min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="res/custom/js/index.js"></script>
-
-
-</body>
-</html>
