--- a/web/angular/app/view_main/view_main.html
+++ b/web/angular/app/view_main/view_main.html
@@ -121,23 +121,23 @@
         </div>
     </div>
 
-    <div id="main" class="pure-u-1">
-        <div class="feed-content">
+    <div id="main" class="pure-u-1" ng-controller="entriesController">
+        <div class="feed-content" ng-repeat="entry in listEntry">
             <div class="feed-content-header pure-g">
                 <div class="pure-u-1-2">
-                    <h2 class="feed-content-title" feed-item-id="f_123" id="toronto"> Hello from Toronto </h2>
+                    <h2 class="feed-content-title" ng-click="slideContent(entry.id)"> {{ entry.title }} </h2>
                     <p class="feed-content-subtitle">
-                        <a href="#">Posted at 3:56pm, April 3, 2012</a>
+                        <a href="#">{{ entry.date }}</a>
                     </p>
                 </div>
             </div>
 
-            <div feed-item-id-hide="f_123" class="feed-content-body" idToHide="f_123" id="content_toronto">
+            <div id="{{ 'e_' + entry.id }}" class="feed-content-body">
                 <button class="secondary-button pure-button">Star</button>
                 <button class="secondary-button pure-button">Mark as unread</button>
                 <button class="secondary-button pure-button">Share</button>
-                <p> Hello World </p> 
-                This is a sadsadsample
+                <p> {{ entry.description }}</p> 
+                
             </div>
 
         </div>
