Preparation pour l'intégration avec l'API, ajout d'une fenetre modal

--- a/web/angular/app/index.html
+++ b/web/angular/app/index.html
@@ -13,7 +13,9 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css"> 
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
   <link rel="stylesheet" href="res/pure-extras/css/pure-extras.css">
-
+  <link rel="stylesheet" href="bower_components/bootstrap/css/bootstrap.min.css">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  
   <link rel="stylesheet" href="app.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
@@ -39,5 +41,6 @@
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
+  <script src="bower_components/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
